Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -45,7 +45,15 @@
 
 <p>git n. /ɡɪt/ A stupid or unpleasant man.</p>
 
-<p>:D</p>
+<p>Huh?</p>
+
+<p>I know, it has nothing to do with git the software but I've seen people quote the Oxford dictionary often and it looks really impressive so I thought I'd  try it as well. :P</p>
+
+<p>Not funny? Can't say I didn't see that coming. Here's a proper definition for you:</p>
+
+<blockquote>
+<p>git is a free and open source distributed version control system.   </p>
+</blockquote>
 
 <h1>
 <a name="git-goals" class="anchor" href="#git-goals"><span class="octicon octicon-link"></span></a>git goals</h1>
@@ -105,6 +113,13 @@
 <li><a href="http://git-scm.com/docs">http://git-scm.com/docs</a></li>
 <li><a href="http://stackoverflow.com">http://stackoverflow.com</a></li>
 </ul><h1>
+<a name="contact" class="anchor" href="#contact"><span class="octicon octicon-link"></span></a>Contact</h1>
+
+<p>If you have any questions or doubts, you can post them in the Plugin Facebook group or email me on <a href="mailto:amjad.4@gmail.com">amjad.4@gmail.com</a></p>
+
+<p>Thanks for attending the session! :)</p>
+
+<h1>
 <a name="further-reading" class="anchor" href="#further-reading"><span class="octicon octicon-link"></span></a>Further reading</h1>
 
 <ul>
